--- a/src/main.css
+++ b/src/main.css
@@ -182,6 +182,15 @@ input{
     margin-right:auto;
     max-width:800px
 }
+.footer {
+    position: relative;
+}
+.version {
+    position: absolute;
+    bottom: 10px;
+    right: 10px;
+    color: #aaa;
+}
 .container{
     padding:20px 20px 80px
 }
@@ -209,7 +218,8 @@ input{
     display:inline-block
 }
 .menu a,.menu div{
-    padding:10px
+    padding:10px;
+    display:inline-block;
 }
 .menu .selected{
     background-color:#fff
@@ -241,5 +251,6 @@ a{
 .code,pre{
     background-color:#f5f5f5;
     padding:10px;
-    font-family:monospace
+    font-family:monospace;
+    white-space: pre-wrap;
 }
